--- a/README.Rmd
+++ b/README.Rmd
@@ -1,15 +1,15 @@
 ---
-title: "Untitled"
+title: "Semináře R"
 output: md_document
 ---
 
 
-# r-workshops
-Presentations and tutorial scripts for workshops in R
+# Semináře R
+Prezentace a ukázkové skripty k semináři v jazyce R.
 
-## Upcoming workshops
+## Termíny seminářů
 
-```{r}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 require(tidyverse)
 require(jsonlite)
 require(knitr)
@@ -17,11 +17,16 @@ require(knitr)
 workshop_dates <- read_json('admin/workshop_dates.json', simplifyDataFrame = T)
 locations <- read_json('admin/locations.json', simplifyDataFrame = T)
 
-left_join(workshop_dates, locations, by = c('location' = 'key'), suffix = c('_ws', '_loc')) %>% 
-  mutate(organizer = 'minervo',
+workshops <- left_join(workshop_dates, locations, by = c('location' = 'key'), suffix = c('_ws', '_loc')) %>% 
+  mutate(is_upcomming = date > Sys.Date(),
+         organizer = 'Minervo',
          location = paste0('[', name, '](', url_loc, ')'),
-         register = paste0('[', organizer, '](', url_ws, ')')) %>% 
-  select('Název' = title, 'Datum' = date, 'Čas' = time, 'Učebna' = location, 'Registrace' = register) %>% 
+         register = paste0('[', organizer, '](', url_ws, ')'),
+         register = ifelse(is_upcomming, register, '')) %>% 
+  arrange(!is_upcomming, date)
+
+workshops %>% 
+  select('Název' = title, 'Datum' = date, 'Čas' = time, 'Místo' = location, 'Registrace' = register) %>% 
   kable()
 ```
 
@@ -29,12 +34,20 @@ left_join(workshop_dates, locations, by = c('location' = 'key'), suffix = c('_ws
 
 ### Úvod do datové analýzy
 
-Série tří seminářů vám pomůže rychle se zorientovat v jazyce R a prostředí RStudia. Budeme se věnovat zejména analýze dat "tidy" přístupem - tedy pomocí knihoven shrnutých do balíku *tidyverse*. Během všech částí projdeme kompletně celou oblast manipulace s daty a vizualizace - od úplných začátků po pokročilé metody.
+Série tří seminářů vám pomůže rychle se zorientovat v jazyce R a interaktivním prostředí RStudia. Budeme se věnovat zejména analýze dat "tidy" přístupem - tedy pomocí knihoven shrnutých do balíku *tidyverse*. Během všech částí projdeme kompletně celou oblast manipulace s daty a vizualizace - od úplných začátků po pokročilé metody. Na konci seminářů sami uvidíte, kolik práce se zjednodušit jednoduchými operacemi v R oproti oproti spreadsheet nástrojům, jako například Excel.
+
+Většina kurzů (soukromých i na vysokých školách) učí R klasickým způsobem. Moderní způsob pomocí balíku tidyverse je mnohem jednodušší pro začátečníky, jelikož nevyžaduje takové znalosti datových struktur v jazyce R. Navíc lze pomocí něj vytvářet analýzy a grafy mnohem snadněji s mnohem čitelnějším kódem. Proto se v tomto semináři zaměřujeme zejména na skupinu knihoven, které patří do tohoto balíku: dplyr, tidyr, purrr, ggplot2, ...
+
+Jednotlivé části semináře na sebe obsahově navazují. Doporučujeme proto, aby se zájemci přihlásili na všechny semináře zároveň.
 
 Pro koho je seminář určen:
 
+* Datový analytici, jejichž každodenním chlebem je Excel a/nebo SQL.
+* Studenti, kteří zpracovávají data pro svoji bakalářskou, nebo diplomovou práci.
+* Všichni, kdo chtějí změnit svoje zaměření na datovou analytiku, nebo data science.
+
 * Lidé bez zkušeností s jazykem R, kteří mají nějakou zkušenost s některým z nástrojů pro práci s daty: Excel, SQL, nebo Python.
-* Mírně pokročilí v R, kteří dosud nevyužívali knihovnu tidyverse.
+* Mírně a středně pokročilí v R, kteří dosud nevyužívali knihovnu tidyverse.
 
 Více informací o semináři na [zvláštní stránce](https://github.com/jankislinger/r-workshops/tree/master/introduction).
 
@@ -60,12 +73,10 @@ Více informací o semináři na [zvláštní stránce](https://github.com/janki
 * Pokročilá manipulace s daty (dplyr, tidyr)
 * Shrnutí procesu load-transform-vizualize
 
-### Specialized workshops
+### Připravované semináře
 
-#### Neural Networks in R
-
-#### Web Scraping
-
-#### Programming in R
-
-#### Package Development
+* Machine Learning in R
+* Neural Networks in R
+* Web Scraping
+* Programming in R
+* Package Development
